--- a/tickets/templates/componentes/navbarheader.html
+++ b/tickets/templates/componentes/navbarheader.html
@@ -33,9 +33,9 @@
                 </li>
                 {% endif %}
             </ul>
-            <form class="d-flex" style="padding-right: 30px;">
-                <a class="btn" href="{% url 'logout' %}" type="button">CERRAR SESIÓN</a>
-            </form>
+            <div class="d-flex" style="padding-right: 30px;">
+                <a class="btn" href="{% url 'logout' %}">CERRAR SESIÓN</a>
+            </div>
         </div>
     </div>
 </nav>
