--- a/tickets/templates/encuestas/encuesta_visor.html
+++ b/tickets/templates/encuestas/encuesta_visor.html
@@ -15,7 +15,7 @@
                             <div class="form-floating mb-3 mt-3" style="text-align: center;">
                                 <h1 id="txtCodigo" class="codigo" hidden>N/C</h1>
                                 <h1 id="txtGracias" class="gracias">GRACIAS POR TU VISITA</h1>
-                                <h3 id="txtGracias2" class="gracias2">Es un gusto ayudarte a contruir tus sueños</h3>
+                                <h3 id="txtGracias2" class="gracias2">Es un gusto ayudarte a construir tus sueños</h3>
                             </div>
                         </div>
                     </div>
