--- a/tickets/templates/administracion/admin.html
+++ b/tickets/templates/administracion/admin.html
@@ -23,6 +23,24 @@
         height: 500px;
         clip-path: polygon(0 0, 100% 0, 100% 77%, 0% 100%);
     }
+   @media (max-width: 767px) {
+        .tituloG{
+            font-size: 35px !important;
+        }
+        .table-dark1 tr th h5{
+            font-size: 14px;
+        }
+        .btnStyle{
+            margin-bottom: 5px;
+        }
+        .imgFondo {
+            background: url('{% static "img/iStock6.jpg" %}') no-repeat;
+            background-size: cover;
+            background-position: center;
+            height: 500px;
+            clip-path: polygon(0 0, 100% 0, 100% 77%, 0% 100%);
+        }
+    }
 </style>
 
 {% endblock background %}
@@ -31,7 +49,7 @@
     <!-- Example row of columns -->
     <div class="row">
         <h5 class="tituloG mb-5">GESTIÓN DE DEPARTAMENTOS</h5>
-        <div class="col-md-6" style="text-align: center;">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-5" style="text-align: center;">
             <h2 class="titulo">DEPARTAMENTOS</h2>
             <table id="record-table" style="height: 100px;" class="table table-hover table-fixed-height">
                 <thead class="table-dark1">
@@ -58,9 +76,9 @@
                         </td>
                         <td class="text-center align-middle">
                             <button type="button" data-bs-toggle="modal" data-bs-target="#modal_departamento"
-                                onclick="modalModificar('modificar')" class="btn">Modificar</button>
+                                onclick="modalModificar('modificar')" class="btn mb-1">Modificar</button>
                             <button type="button" data-bs-toggle="modal" data-bs-target="#modal_departamento"
-                                onclick="modalModificar('eliminar')" class="btn">Eliminar</button>
+                                onclick="modalModificar('eliminar')" class="btn mb-1">Eliminar</button>
                         </td>
                     </tr>
                     {% endfor %}
@@ -72,7 +90,7 @@
             <button type="button" data-bs-toggle="modal" data-bs-target="#modal_ley" 
             class="btn btnStyleLey" onclick="cargarDepartamentosLey()">Agregar Ley 7600</button>
         </div>
-        <div class="col-md-6" style="text-align: center;">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-5" style="text-align: center;">
             <h2 class="titulo">TRÁMITES</h2>
             <table id="record-table2" style="height: 100px;" class="table table-hover table-fixed-height">
                 <thead class="table-dark1">
@@ -96,9 +114,9 @@
                         </td>
                         <td class="text-center align-middle">
                             <button type="button" data-bs-toggle="modal" data-bs-target="#modal_tramite"
-                                onclick="modalModificarTramite('modificar')" class="btn">Modificar</button>
+                                onclick="modalModificarTramite('modificar')" class="btn mb-1">Modificar</button>
                             <button type="button" data-bs-toggle="modal" data-bs-target="#modal_tramite"
-                                onclick="modalModificarTramite('eliminar')" class="btn">Eliminar</button>
+                                onclick="modalModificarTramite('eliminar')" class="btn mb-1">Eliminar</button>
                         </td>
                     </tr>
                     {% endfor %}
